war/css/styles.css
/* CSS reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

/* General */
body {
	padding-top: 20px;	
}

a {
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

h1 {
  font-family: "Arial Black", Arial, Helvetica, sans-serif;
  font-size: 3em;
}

h2 {
  color: #002D4B;
  font-size: 1.5em;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 10px;
  margin-left: 10px;
  margin-top: 5px;
  border-bottom: 1px solid lightgrey;
}

h3 {
  font: bold;
  color: #002D4B;
  font-size: 1.3em;
  margin-left: 20px;
}

p {
  font-size: 1.1em;
  line-height: 120%;
  margin-left: 75px;
  margin-right: 50px;
  margin-bottom: 7px;
}

ul {
	font-size: 1.1em;
	line-height: 120%;
	margin-left: 100px;
	margin-right: 50px;
	margin-bottom: 7px;
}

/* Classes */

#main_wrapper {
    width: 1000px;
    margin: 0px auto 15px auto;
    overflow: hidden;
    font-family: Arial, sans-serif;
    font-size: 12px;
    color: #333;
    background: #FFF;
}



/* Header */
#header {
	padding-bottom: 10px;
}

/* Title */
#title {
	float: left;	
}

/* Navigation */
#navigation {
	float: right;
	margin: 15px 0;
	font-size: 93.75%;
	line-height: 1;
}
	
#navigation ul {
	margin: 0;
	padding: 0;
}
	
#navigation li {
	margin: 0;
	padding: 0;
	display: inline;
	list-style-type: none;
}
	
#navigation a {
	display: block;
	float: left;
	margin: 0 0 0 2px;
	padding: 6px 10px;
	font-weight: bold;
	-webkit-border-radius:  5px;
	-moz-border-radius:  5px;
	border-radius:  5px;
}

.blue a { color: #3690C0; }

.home  #home-nav a,
.page-id-500 #about-nav a, 
.page-id-501 #help-nav a,
.page-id-502 #login-nav a {
	text-decoration: none;
	color: black;
}
	
#navigation a:focus {
	background: #000;
}


/* Contents */
#contents {
	border: 1px solid #E8E8E8;
}

/* Footer */
#footer {
	padding-top: 5px;
    color: #505050;
}

#footer a {
	text-decoration: none;	
}

/* Page specific properties */

/* Home page css */
.home p {
	font-size: 1.7em;	
}

/* Calendar view CSS */
.calendarView #calendarVisualizationView {
	padding: 15px;
	width: 500px;
	height: 500px;
}

.calendarView #monthSelectionView {
	padding: 2px;
	width: 100%;
	height: 30px;
	border-bottom-width: 1px;	
	border-bottom-style: solid;
}

.calendarView #visualizationSelectionView {
	width: 300px;
	height: 40px;
	border-left-width: 1px;
	border-left-style: solid;
	border-bottom-width: 1px;
	border-bottom-style: solid;
}

.calendarView #dataLabelSelectionView {
	width: 300px;
	height: 500px;
	border-left-width: 1px;
	border-left-style: solid;
	border-bottom-width: 1px;
	border-bottom-style: solid;	
}


/* General properties */
.clear-line { clear: both; }
.float-right { float: right; }
.float-left { float: left; }
.border-color-standard { border-color: #E8E8E8; }

